5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4485/executions/1791_1616.log
== TEST (2019-05-29 14:14:14) 
-- CODE:
from numpy import*

magia= array(eval(input("")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:14:14) 
-- CODE:
from numpy import*

magia= array(eval(input("")))
-- EXECUTION TIME:
0.354431
-- TEST CASE 1:
---- input:
["GELO","ILUSAO","CHOQUE"]
[2,1,8]
---- correct output:
46
---- user output:

-- TEST CASE 2:
---- input:
["GELO","CONJURACAO","CHOQUE"]
[2,4,2]
---- correct output:
44
---- user output:

-- TEST CASE 3:
---- input:
["GELO","ILUSAO","CHOQUE","FOGO"]
[2,3,1,4]
---- correct output:
50
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:14:21) 
-- CODE:
from numpy import*

magia= array(eval(input("")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:40:40) 
-- CODE:
from numpy import*

magia= array(eval(input("magia(as):")))
dano=  array(eval(input("nivel:")))
i=0


if(magia == "GELO"):
	l= dano*2
elif(magia == "FOGO"):
	p= dano*3
elif(magia == "CHOQUE"):
	r=dano*4
elif(magia == "CONJURACAO"):
	k=dano*8
elif(magia == "ILUSAO")
	f=dano*10


print(l+p+r+k+f)
-- ERROR:
File "XXXX", line 16
    elif(magia == "ILUSAO")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:41:26) 
-- CODE:
from numpy import*

magia= array(eval(input("magia(as):")))
dano=  array(eval(input("nivel:")))
i=0


if(magia == "GELO"):
	l = dano * 2
elif(magia == "FOGO"):
	p = dano * 3
elif(magia == "CHOQUE"):
	r = dano * 4
elif(magia == "CONJURACAO"):
	k = dano*8
elif(magia == "ILUSAO"):
	f = dano*10


print(l+p+r+k+f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:42:01) 
-- CODE:
from numpy import*

magia=eval(input("magia(as):")))
dano=  array(eval(input("nivel:")))
i=0


if(magia == "GELO"):
	l = dano * 2
elif(magia == "FOGO"):
	p = dano * 3
elif(magia == "CHOQUE"):
	r = dano * 4
elif(magia == "CONJURACAO"):
	k = dano*8
elif(magia == "ILUSAO"):
	f = dano*10


print(l+p+r+k+f)
-- ERROR:
File "XXXX", line 3
    magia=eval(input()))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:42:11) 
-- CODE:
from numpy import*

magia=input("magia(as):")
dano=  array(eval(input("nivel:")))
i=0


if(magia == "GELO"):
	l = dano * 2
elif(magia == "FOGO"):
	p = dano * 3
elif(magia == "CHOQUE"):
	r = dano * 4
elif(magia == "CONJURACAO"):
	k = dano*8
elif(magia == "ILUSAO"):
	f = dano*10


print(l+p+r+k+f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:42:57) 
-- CODE:
from numpy import*

magia=input("magia(as):")
dano=  array(eval(input("nivel:")))
i=0


if(magia == "GELO"):
	l = dano * 2
elif(magia == "FOGO"):
	p = dano * 3
elif(magia == "CHOQUE"):
	r = dano * 4
elif(magia == "CONJURACAO"):
	k = dano*8
elif(magia == "ILUSAO"):
	f = dano*10


print(l+p+r+k+f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:45:36) 
-- CODE:
from numpy import*

magia=input("magia(as):")
dano=  array(eval(input("nivel:")))
i=0
l=
p=0
r=0
k=0
f=0

if(magia == "GELO"):
	l = dano * 2
elif(magia == "FOGO"):
	p = dano * 3
elif(magia == "CHOQUE"):
	r = dano * 4
elif(magia == "CONJURACAO"):
	k = dano*8
elif(magia == "ILUSAO"):
	f = dano*10


print(l+p+r+k+f)
-- ERROR:
File "XXXX", line 6
    l=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:45:42) 
-- CODE:
from numpy import*

magia=input("magia(as):")
dano=  array(eval(input("nivel:")))
i=0
l=0
p=0
r=0
k=0
f=0

if(magia == "GELO"):
	l = dano * 2
elif(magia == "FOGO"):
	p = dano * 3
elif(magia == "CHOQUE"):
	r = dano * 4
elif(magia == "CONJURACAO"):
	k = dano*8
elif(magia == "ILUSAO"):
	f = dano*10


print(l+p+r+k+f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:46:19) 
-- CODE:
from numpy import*

magia=input("magia(as):")
dano=  array(eval(input("nivel:")))
i=0
l=0
p=0
r=0
k=0
f=0

if(magia == "GELO"):
	l = dano * 2
elif(magia == "FOGO"):
	p = dano * 3
elif(magia == "CHOQUE"):
	r = dano * 4
elif(magia == "CONJURACAO"):
	k = dano*8
elif(magia == "ILUSAO"):
	f = dano*10


	print(l+p+r+k+f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:46:59) 
-- CODE:
from numpy import*

magia=input("magia(as):")
dano=  array(eval(input("nivel:")))
i=0
l=0
p=0
r=0
k=0
f=0

if(magia == "GELO"):
	l = dano * 2
elif(magia == "FOGO"):
	p = dano * 3
elif(magia == "CHOQUE"):
	r = dano * 4
elif(magia == "CONJURACAO"):
	k = dano*8
elif(magia == "ILUSAO"):
	f = dano*10


	print(l+p+r+k+f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
